--- a/subject_info/main.tex
+++ b/subject_info/main.tex
@@ -118,7 +118,7 @@ Die Untersuchungsliege kann sich während der Messung bewegen.
 
 Bitte beantworten Sie die folgenden Fragen sorgfältig:
 
-\begin{longtable}{|p{13cm}|p{3cm}|}
+\begin{longtable}{|p{12.5cm}|p{3cm}|}
 \hline
 Befinden sich metallische oder leitfähige Implantate oder Prothesen (z.B. Herzschrittmacher, Insulinpumpe, Mittelohrimplantate, Prothesen, Hörgeräte) in oder an Ihrem Körper? & Ja \checkbox\ Nein \checkbox \\
 \hline
@@ -128,18 +128,18 @@ Haben Sie Tätowierungen am Kopf-/Halsbereich, Nikotinpflaster oder kosmetische 
 \hline
 Wurde bei Ihnen eine Operation am Herz oder Kopf durchgeführt? & Ja \checkbox\ Nein \checkbox \\
 \hline
-Bestehen chronische Erkrankungen? \newline Wenn ja, welche: \rule{10cm}{0.4pt} & Ja \checkbox\ Nein \checkbox \\
+Bestehen chronische Erkrankungen? \newline Wenn ja, welche: \rule{9cm}{0.4pt} & Ja \checkbox\ Nein \checkbox \\
 \hline
-Nehmen Sie derzeit Medikamente? \newline Wenn ja, welche: \rule{10cm}{0.4pt} & Ja \checkbox\ Nein \checkbox \\
+Nehmen Sie derzeit Medikamente? \newline Wenn ja, welche: \rule{9cm}{0.4pt} & Ja \checkbox\ Nein \checkbox \\
 \hline
 \end{longtable}
 
 
-\vspace{1.5em}
+%\vspace{1.5em}
 
 \section*{Zusätzliche Angaben für Frauen}
 
-\begin{longtable}{|p{13cm}|p{3cm}|}
+\begin{longtable}{|p{12.5cm}|p{3cm}|}
 \hline
 Besteht eine Schwangerschaft bzw. die Möglichkeit einer Schwangerschaft? &  Ja \checkbox\ Nein \checkbox \\
 \hline
